# ChangeLog for dev-python/genzshcomp
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Apr 2012; James Rowe <jnrowe@gmail.com> genzshcomp-0.2.2.ebuild:
  Use distutils.eclass via jnrowe-pypi.

  19 Mar 2012; James Rowe <jnrowe@gmail.com> genzshcomp-0.2.2.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com> genzshcomp-0.2.2.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  19 Aug 2011; James Rowe <jnrowe@gmail.com> -genzshcomp-0.2.1.ebuild,
  genzshcomp-0.2.2.ebuild:
  Keyworded x86.

  19 Aug 2011; James Rowe <jnrowe@gmail.com> genzshcomp-0.2.2.ebuild:
  Keyworded amd64.

*genzshcomp-0.2.2 (20 Jul 2011)

  20 Jul 2011; James Rowe <jnrowe@gmail.com> +genzshcomp-0.2.2.ebuild:
  Version bump [439].

  28 Mar 2011; James Rowe <jnrowe@gmail.com> -genzshcomp-0.2.ebuild,
  genzshcomp-0.2.1.ebuild:
  Keyworded x86.

  26 Mar 2011; James Rowe <jnrowe@gmail.com> genzshcomp-0.2.1.ebuild:
  Keyworded amd64.

  23 Mar 2011; James Rowe <jnrowe@gmail.com> -genzshcomp-0.1.ebuild,
  genzshcomp-0.2.ebuild:
  Keyworded x86.

  22 Mar 2011; James Rowe <jnrowe@gmail.com> genzshcomp-0.2.ebuild:
  Keyworded amd64.

*genzshcomp-0.2.1 (23 Feb 2011)

  23 Feb 2011; James Rowe <jnrowe@gmail.com> +genzshcomp-0.2.1.ebuild:
  Version bump [287].

  16 Feb 2011; James Rowe <jnrowe@gmail.com> -genzshcomp-0.0.8.ebuild,
  genzshcomp-0.1.ebuild:
  Keyworded x86.

*genzshcomp-0.2 (16 Feb 2011)

  16 Feb 2011; James Rowe <jnrowe@gmail.com> +genzshcomp-0.2.ebuild:
  Version bump [277].

  16 Feb 2011; James Rowe <jnrowe@gmail.com> genzshcomp-0.1.ebuild:
  Keyworded amd64.

*genzshcomp-0.1 (17 Jan 2011)

  17 Jan 2011; James Rowe <jnrowe@gmail.com> +genzshcomp-0.1.ebuild:
  Version bump [243].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml: