@@ -2,10 +2,11 @@
 Hash: SHA512
 
 DIST genzshcomp-0.2.2.tar.gz 9437 RMD160 6c8a70201c4e7e1799982983f61ae13f96fa9cbc SHA1 6a61cfba6ce08d798c61f745573f7aa7acabec2a SHA256 60c1688da8d86e6ae87879b930fe3fd42c9285977bc9c708f09bc61948f7112e
+DIST genzshcomp-0.3.tar.gz 10075 RMD160 0bc3ca21d197719192f15c5ac3e5854d313727de SHA1 f9d79790bb8575be9034ed1d7294023b4c5c7d42 SHA256 fd2fd3e660b35dd43be5e99f29670e6c4a8c4ed29bcab6a2e14d67a964a81e19
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7ApOcACgkQzJrj3cAXR0kGdwCcCugLUoLRCtXrfylr9nY+88SP
-T9YAoKkBRhvjvHbJB2nZQYFxHkVt6sRg
-=W+DB
+iEYEAREKAAYFAk+JXpoACgkQzJrj3cAXR0lvcgCgvCRjEq7BhXDfuISBWq+peCnA
+tPsAn3Vd4eR+EU5miW9HFIYAZOO87qYO
+=LL2o
 -----END PGP SIGNATURE-----
