@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install postinst postrm prepare setup test
+DEPEND=|| ( dev-python/argparse >=dev-lang/python-2.7 ) dev-lang/python test? ( dev-python/nose )
+DESCRIPTION=Automatic generation of zsh completion functions
+EAPI=4
+HOMEPAGE=http://bitbucket.org/hhatto/genzshcomp/
+IUSE=test
+KEYWORDS=~amd64 ~x86
+LICENSE=BSD
+RDEPEND=|| ( dev-python/argparse >=dev-lang/python-2.7 ) dev-lang/python
+SLOT=0
+SRC_URI=mirror://pypi/g/genzshcomp/genzshcomp-0.3.tar.gz
+_eclasses_=distutils	15ae23f6f8219a009bfcfff7724fe727	eutils	6891f6f484e3b44a0a15e1b0c0fc9a14	jnrowe-pypi	9789fd5aecac33fd48a8bcd9d1dc98e0	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	36d7e2b7aa4dce62364c72eec96610cf	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
+_md5_=6d4e173ea9d2f98f69f96a8f939a88eb
