@@ -44,6 +44,8 @@ REM 2012-05-07 *1 MSG %"Stabilise amd64 dev-python/sure-0.10.3%" %a
 REM 2012-05-07 *1 MSG %"Stabilise x86 dev-python/sure-0.10.3%" %a
 REM 2012-05-14 *1 MSG %"Stabilise amd64 dev-python/feedcache-1.4%" %a
 REM 2012-05-14 *1 MSG %"Stabilise x86 dev-python/feedcache-1.4%" %a
+REM 2012-05-14 *1 MSG %"Stabilise amd64 dev-python/genzshcomp-0.3%" %a
+REM 2012-05-14 *1 MSG %"Stabilise x86 dev-python/genzshcomp-0.3%" %a
 REM 2012-05-16 *1 MSG %"Stabilise x86 dev-vcs/gitflow-0.4.1-r2%" %a
 REM 2012-05-19 *1 MSG %"Stabilise amd64 dev-python/pycparser-2.05%" %a
 REM 2012-05-23 *1 MSG %"Stabilise x86 dev-python/attest-0.5.2%" %a
