@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*genzshcomp-0.3 (14 Apr 2012)
+
+  14 Apr 2012; James Rowe <jnrowe@gmail.com> +genzshcomp-0.3.ebuild:
+  Version bump [588].
+
   08 Apr 2012; James Rowe <jnrowe@gmail.com> genzshcomp-0.2.2.ebuild:
   Use distutils.eclass via jnrowe-pypi.
 
